--- a/Game/steam_emu.ini
+++ b/Game/steam_emu.ini
@@ -1,14 +1,14 @@
-###        ЬЫЫЫЫЫ   Ь
-###      °ЫЫЫЫ ЯЫЫ ЫІ ЯЯЯЫЫЫЫЫЫЫЬ     ЯЯЯЯЯЫЫІЫЫЬ     ЬІЫЫЫЯ
-###     ±ЫЫЫЯ   ±ЫЫЯ        ЯЯЫЫЫЫ°           ЯЫЫЫ  ±ЫЫЫЯ
-###    ІЫЫЫ      Я         ЫЫІ  ЯЫЫЫ±           °ЫЫІЫЫЫ
-###   ІЫЫЫ        ЬЫЫЫЫЫЬ  ЫЫЫ   ЯЫЫЫ ЬЫЫЫЫЫЫЬ  ±ЫЫЫЫЫ
-###   ЫЫЫ°     °ЫЫЫЫЯ  ЯЫІ ЫЫЫ    ЫЫЫІЫЫІ  °ЫЫ  ЫЫЫІЫЫЫ
-###   ±ЫЫЫ     ЫЫЫЫ°    ЫЫ ЫЫЫ   °ЫЫЫЫЫЫЫЫЫЫЫЯ ЫЫЫ± ±ЫЫЫ
-###    °ЫЫЫЬ ЬЫЫЯІЫЫЬ ЬЫЫ ІЫЫ   ЫЫЫ±ЫЫЫ°     ЬЫЫЫ°   °ЫЫЫЬ
-###      ЯЫЫЫЫЫЯ   ЯЫЫЫІЯ  ЫЫЯ °ЫЫЫ°  ЯЫЫЫЫЫЫЫІЫЯ       ЯІЫЫЬ
-###                        ЬЫЫЫЫЫЫ±
-###          ЯЯЯЫЫІЬЬЬЬЬЫІЫЫЫІЯЯ    
+###        ГњГ›Г›Г›Г›Г›   Гњ
+###      В°Г›Г›Г›Г› ГџГ›Г› Г›ВІ ГџГџГџГ›Г›Г›Г›Г›Г›Г›Гњ     ГџГџГџГџГџГ›Г›ВІГ›Г›Гњ     ГњВІГ›Г›Г›Гџ
+###     В±Г›Г›Г›Гџ   В±Г›Г›Гџ        ГџГџГ›Г›Г›Г›В°           ГџГ›Г›Г›  В±Г›Г›Г›Гџ
+###    ВІГ›Г›Г›      Гџ         Г›Г›ВІ  ГџГ›Г›Г›В±           В°Г›Г›ВІГ›Г›Г›
+###   ВІГ›Г›Г›        ГњГ›Г›Г›Г›Г›Гњ  Г›Г›Г›   ГџГ›Г›Г› ГњГ›Г›Г›Г›Г›Г›Гњ  В±Г›Г›Г›Г›Г›
+###   Г›Г›Г›В°     В°Г›Г›Г›Г›Гџ  ГџГ›ВІ Г›Г›Г›    Г›Г›Г›ВІГ›Г›ВІ  В°Г›Г›  Г›Г›Г›ВІГ›Г›Г›
+###   В±Г›Г›Г›     Г›Г›Г›Г›В°    Г›Г› Г›Г›Г›   В°Г›Г›Г›Г›Г›Г›Г›Г›Г›Г›Г›Гџ Г›Г›Г›В± В±Г›Г›Г›
+###    В°Г›Г›Г›Гњ ГњГ›Г›ГџВІГ›Г›Гњ ГњГ›Г› ВІГ›Г›   Г›Г›Г›В±Г›Г›Г›В°     ГњГ›Г›Г›В°   В°Г›Г›Г›Гњ
+###      ГџГ›Г›Г›Г›Г›Гџ   ГџГ›Г›Г›ВІГџ  Г›Г›Гџ В°Г›Г›Г›В°  ГџГ›Г›Г›Г›Г›Г›Г›ВІГ›Гџ       ГџВІГ›Г›Гњ
+###                        ГњГ›Г›Г›Г›Г›Г›В±
+###          ГџГџГџГ›Г›ВІГњГњГњГњГњГ›ВІГ›Г›Г›ВІГџГџ    
 ###
 ###
 ### Game data is stored at %SystemDrive%\Users\Public\Documents\Steam\CODEX\1245620
@@ -30,7 +30,7 @@ UserName=CODEX
 ###
 ### Language that will be used in the game
 ###
-Language=english
+Language=spanish
 ###
 ### Enable lobby mode
 ###
